--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,10 +24,10 @@ jobs:
           node-version: '16'
           
       - name: Install Teams Toolkit CLI
-        run: npm install -g @microsoft/teamsapp-cli
+        run: npm install @microsoft/teamsapp-cli@3.0.7
         
       - name: Azure Login
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           creds: '{"clientId":"${{ vars.MSFT_SERVICE_PRINCIPAL_CLIENT_ID }}","clientSecret":"${{ secrets.MSFT_SERVICE_PRINCIPAL_CLIENT_SECRET }}","tenantId":"${{ vars.MSFT_TENANT_ID }}"}'
           
