--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,6 +33,10 @@ jobs:
           allow-no-subscriptions: true
           
       - name: Create Teams App
+        env:
+          M365_TENANT_ID: ${{ vars.MSFT_TENANT_ID }}
+          M365_CLIENT_ID: ${{ vars.MSFT_SERVICE_PRINCIPAL_CLIENT_ID }}
+          M365_CLIENT_SECRET: ${{ secrets.MSFT_SERVICE_PRINCIPAL_CLIENT_SECRET }}
         run: |
           teamsapp new --interactive false --app-name "TeamsAppBot_Reg1" --capability "bot" --programming-language "csharp"
           cd TeamsAppBot_Reg1
