--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,6 +31,9 @@ jobs:
         with:
           creds: '{"clientId":"${{ vars.MSFT_SERVICE_PRINCIPAL_CLIENT_ID }}","clientSecret":"${{ secrets.MSFT_SERVICE_PRINCIPAL_CLIENT_SECRET }}","tenantId":"${{ vars.MSFT_TENANT_ID }}"}'
           allow-no-subscriptions: true
+
+      - name: Login to M365
+        run: teamsapp auth login m365 --service-principal --username ${{ vars.MSFT_SERVICE_PRINCIPAL_CLIENT_ID }} --password ${{ secrets.MSFT_SERVICE_PRINCIPAL_CLIENT_SECRET }} --tenant ${{ vars.MSFT_TENANT_ID }}
           
       - name: Create Teams App
         env:
